# CXMLTestFramework

./: CMakeLists.txt  README
FileUtilities/: CMakeLists.txt  FileUtil.cpp  FileUtil.h  PathName.cpp  PathName.h
TestingFramework/: Base64.cpp  Base64.h  CMakeLists.txt  Measurement.cpp  Measurement.h  MeasurementVisitor.cpp  RegressionTest.cpp  RegressionTest.h  tfMeasurement.cpp  tfMeasurement.h  tfMeasurementVisitor.cpp  tfMeasurementVisitor.h  tfRegressionTest.cpp  tfRegressionTest.h
TestingFramework/tests/: CMakeLists.txt  tfRegressionTestOutputTest1.cxx  tfRegressionTestOutputTest2.cxx  tfRegressionTestTest2.cxx  tfRegressionTestTest3.cxx  tfRegressionTestTest4.cxx  tfTestSupport.h  tfTestSupport.h.in
TestingFramework/tests/xml/: tfRegressionTestOutputTest1.xml  tfRegressionTestTest2.xml  tfRegressionTestTest3.xml
itktf/: CMakeLists.txt  itktfDifferenceImageFilter.txx~  itktfImageCompare.cxx  itktfRegression.cxx  itktfRegression.h
itktf/Testing/: CMakeLists.txt
