PROJECT( ITK_CLT )

CMAKE_MINIMUM_REQUIRED ( VERSION 2.6 )
CMAKE_POLICY( SET CMP0012 NEW )

ENABLE_TESTING()
INCLUDE(CTest)


OPTION(BUILD_SHARED_LIBS "Build with shared libraries." OFF)

INCLUDE_DIRECTORIES ( ${PROJECT_SOURCE_DIR} )

SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin CACHE INTERNAL "Single output directory for building all executables.")

ADD_SUBDIRECTORY ( FileUtilities )
ADD_SUBDIRECTORY ( TestingFramework )
ADD_SUBDIRECTORY ( itktf )