PROJECT( TESTINGFRAMEWORK )

SET( TESTINGFRAMEWORK_LIB_SRC
  Base64.cpp
  RegressionTest.cpp
  Measurement.cpp
  MeasurementVisitor.cpp
  diff.cpp
  )

FIND_PACKAGE ( EXPAT REQUIRED )

INCLUDE_DIRECTORIES("${EXPAT_INCLUDE_DIRS}" "${TESTINGFRAMEWORK_BINARY_DIR}" )



CONFIGURE_FILE("${TESTINGFRAMEWORK_SOURCE_DIR}/testutilConfigure.h.in"
  "${TESTINGFRAMEWORK_BINARY_DIR}/testutilConfigure.h" IMEDIATE) 
 

ADD_LIBRARY( testingframework ${TESTINGFRAMEWORK_LIB_SRC} )
TARGET_LINK_LIBRARIES( testingframework ${EXPAT_LIBRARIES} fileutil )