PROJECT( TESTINGFRAMEWORK )

SET( TESTINGFRAMEWORK_LIB_SRC
  tfBase64.cpp
  tfRegressionTest.cpp
  tfMeasurement.cpp
  tfMeasurementVisitor.cpp
  tfDiff.cpp
  )

FIND_PACKAGE ( EXPAT REQUIRED )
FIND_PACKAGE ( ITK )

IF ( ITK_FOUND )

  INCLUDE ( ${ITK_USE_FILE} )

  ADD_EXECUTABLE( tfPipeToXML tfPipeToXML.cxx )
  TARGET_LINK_LIBRARIES( tfPipeToXML itksys testingframework )  
ENDIF ( ITK_FOUND )

INCLUDE_DIRECTORIES("${EXPAT_INCLUDE_DIRS}" "${TESTINGFRAMEWORK_BINARY_DIR}" )

CONFIGURE_FILE("${TESTINGFRAMEWORK_SOURCE_DIR}/TestFrameworkConfigure.h.in"
  "${TESTINGFRAMEWORK_BINARY_DIR}/TestFrameworkConfigure.h" IMEDIATE) 


IF( BUILD_TESTING )
  ADD_SUBDIRECTORY ( tests ) 
ENDIF( BUILD_TESTING )

ADD_LIBRARY( testingframework ${TESTINGFRAMEWORK_LIB_SRC} )
TARGET_LINK_LIBRARIES( testingframework ${EXPAT_LIBRARIES} fileutil )
